welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:6: error: not found: value patate
	else { return patate } 
                      ^